@@ -16,6 +16,11 @@
 # You should have received a copy of the GNU General Public License
 # along with GRUB.  If not, see <http://www.gnu.org/licenses/>.
 
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+. ${libdir}/grub/update-grub_lib
+
 if [ "x${GRUB_DISTRIBUTOR}" = "x" ] ; then
   OS=GNU
 else
