@@ -1,5 +1,9 @@
 2008-07-30  Robert Millan  <rmh@aybabtu.com>
 
+	* util/grub.d/10_hurd.in: Source ${libdir}/grub/update-grub_lib.
+
+2008-07-30  Robert Millan  <rmh@aybabtu.com>
+
 	* term/i386/pc/vga_text.c (grub_console_cls): Use
 	grub_console_gotoxy() to go back to beginning of the screen.
 	Found by Patrick Georgi <patrick.georgi@coresystems.de>
